--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,1 +1,11 @@
-signup page
+<h1>Create an Account</h1>
+<form action="/signup" method="post">
+  <label for="user[username]">Username:<br>
+    <input type="text" name="user[username]">
+  </label><br>
+  <label for="user[password]">Password:<br>
+    <input type="password" name="user[password]">
+  </label><br>
+
+    <input type="submit" name="submit" value="Create Account">
+</form>
