--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,11 @@
-login page
+<h1>Log In To Your Account</h1>
+<form action="/login" method="post">
+  <label for="user[username]">Username:<br>
+    <input type="text" name="user[username]">
+  </label><br>
+  <label for="user[password]">Password:<br>
+    <input type="password" name="user[password]">
+  </label><br>
+
+    <input type="submit" name="submit" value="Log In">
+</form>
