--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,12 @@
       <%= yield %>
 
     <footer class="branding">
-      <small>&copy; 2018 <strong>RecipeBookmarker</strong></small>
+      <small>&copy; 2018 <strong>RecipeBookmarker</strong></small> <br>
+      <% if Helpers.current_user(session) %>
+      <small> Current User: <%= @user.username %> </small>
+      <% else%>
+      <small> No one is logged in right now</small>
+      <% end %>
     </footer>
   </div>
 
