--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,7 +21,8 @@
     <footer class="branding">
       <small>&copy; 2018 <strong>RecipeBookmarker</strong></small> <br>
       <% if Helpers.current_user(session) %>
-      <small> Current User: <%= @user.username %> </small>
+      <% @user = Helpers.current_user(session) %>
+      <small align="left"> Current User: <%= @user.username %> </small> <small align="right"> <a href="/logout">Log Out</a></small>
       <% else%>
       <small> No one is logged in right now</small>
       <% end %>
