--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,3 @@
-<h1>Recipe Bookmarker</h1>
-<h2>Please <a href="/login">Log In</a> or <a href="/signup">Sign Up</a> to continue.</h2>
+<h1>Welcome to Recipe Bookmarker</h1>
+<h2><em>New Recipes Added Daily</em></h2>
+<h3>Please <a href="/login">Log In</a> or <a href="/signup">Sign Up</a> to continue.</h3>
