--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -3,6 +3,6 @@
 <h2><em>New Recipes Added Daily</em></h2>
 <!-- Iterate over Recipe.all to create a list -->
 <% @recipes.each do |recipe| %>
-  <li> <a href="/recipes/#{recipe.id}"> <%= recipe.name %> </a> </li>
+  <li> <a href="/recipes/<%= recipe.id %>"> <%= recipe.name %> </a> </li>
 <% end %>
 <!-- Button to show User's homepage, and button to add a new Recipe Bookmark  -->
