--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -5,4 +5,12 @@
 <% @recipes.each do |recipe| %>
   <li> <a href="/recipes/<%= recipe.id %>"> <%= recipe.name %> </a> </li>
 <% end %>
+
 <!-- Button to show User's homepage, and button to add a new Recipe Bookmark  -->
+<form action="/users/<%= @user.id %>/bookmarks" method="get">
+  <input type="submit" name="home_page" value="Go To Your Home Page">
+</form>
+
+<form action="/recipes/new" method="get">
+  <input type="submit" name="new_recipe" value="Add Your New Recipe">
+</form>
