--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -3,10 +3,11 @@
 <h2><em>New Recipes Added Daily</em></h2>
 <!-- Iterate over Recipe.all to create a list -->
 <% @recipes.each do |recipe| %>
-  <li> <a href="/recipes/<%= recipe.id %>"> <%= recipe.name %> </a> </li>
+  <li><h3> <a href="/recipes/<%= recipe.id %>"> <%= recipe.name %> </a> </h3></li>
 <% end %>
 
+<br> <hr> <br>
 <!-- Links to show User's homepage, and to add a new Recipe Bookmark  -->
 <a href="/users/<%= @user.id %>/bookmarks"> Go to your Home Page </a>
-
+<br>
 <a href="/recipes/new"> Add Your New Recipe </a>
