added links to recipe and user index pages to navigate between these pages

--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -8,6 +8,6 @@
 
 <br> <hr> <br>
 <!-- Links to show User's homepage, and to add a new Recipe Bookmark  -->
-<a href="/users/<%= @user.id %>/bookmarks"> Go to your Home Page </a>
+<a href="/users/<%= @user.id %>/bookmarks"> Go to your Homepage </a>
 <br>
 <a href="/recipes/new"> Add Your New Recipe </a>
