--- a/app/views/recipes/new.erb
+++ b/app/views/recipes/new.erb
@@ -7,5 +7,6 @@
   <label for="">URL:
     <input type="text" name="recipe[url]">
   </label> <br>
+  <input type="hidden" name="recipe[creator_id]" value="<%= @creator.id %>">
   <input type="submit" name="submit" value="Submit">
 </form>
