--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,8 +20,8 @@
 
     <footer class="branding">
       <small>&copy; 2018 <strong>RecipeBookmarker</strong></small> <br>
-      <% if Helpers.current_user(session) %>
-      <% @user = Helpers.current_user(session) %>
+      <% if current_user%>
+      <% @user = current_user %>
       <small align="left"> Current User: <%= @user.username %> </small>
       <small align="right"> <a href="/logout">Log Out</a></small>
       <% else%>
