removed old comments, added bookmark upon recipe creation in app controller, reset db

--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,5 +1,7 @@
 <!-- USER INDEX -->
 
+<!--TODO: ITERATE OVER RECIPES AND BOOKMARKS, OR FIX ALL_RECIPES METHOD  -->
+
 <h1>Welcome to your homepage, <%= @user.username %></h1>
 <h3>Here are the recipes you have bookmarked:</h3>
 <ul>
