--- a/app/views/recipes/new.erb
+++ b/app/views/recipes/new.erb
@@ -11,6 +11,6 @@
   <label for="">URL:
     <input type="text" name="recipe[url]">
   </label> <br>
-  <input type="hidden" name="recipe[creator_id]" value="<%= @creator.id %>">
+  <input type="hidden" name="recipe[user_id]" value="<%= @user.id %>">
   <input type="submit" name="submit" value="Submit">
 </form>
