removed all_recipes method and replaced with bookmarked_recipes in controllers and User model

--- a/app/views/recipes/show.erb
+++ b/app/views/recipes/show.erb
@@ -15,7 +15,7 @@
 
 <!-- QUESTION: Does it make sense for a user to own a recipe and be able to unbookmark it?  -->
 
-<% if @user.all_recipes.include?(@recipe)%>
+<% if @user.recipes.include?(@recipe) || @user.bookmarked_recipes.include?(@recipe)%>
 
   <!-- User method to remove recipe from bookmarks -->
 
