--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -6,7 +6,10 @@
 <h3>Here are the recipes you have bookmarked:</h3>
 <ul>
 
-  <% @user.all_recipes.each do |recipe| %>
+  <% @user.recipes.each do |recipe| %>
+    <li><h3> <a href="/recipes/<%= recipe.id %>"> <%= recipe.name %> </a> </h3>  </li>
+  <% end %>
+  <% @user.bookmarked_recipes.each do |recipe| %>
     <li><h3> <a href="/recipes/<%= recipe.id %>"> <%= recipe.name %> </a> </h3>  </li>
   <% end %>
 </ul>
