--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,7 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <h1>Log In To Your Account</h1>
 <form action="/login" method="post">
   <label for="user[username]">Username:<br>
@@ -9,3 +13,5 @@
 
     <input type="submit" name="submit" value="Log In">
 </form>
+<br><br>
+<a href="/signup">Sign Up</a>
